--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,17 @@
   margin-top: 16px;
 }
 
+.textbox{
+  text-align: center;
+  color: gray;
+  margin-top: 16px;
+  padding: 5px;
+}
+
 .waveButton {
   cursor: pointer;
   margin-top: 16px;
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  
 }
